Fixed alignment using css.

--- a/to-do-list_app/src/App.css
+++ b/to-do-list_app/src/App.css
@@ -1,3 +1,24 @@
+.top-div {
+  display: flex;
+  align-items: left;
+  justify-content: center;
+  height: 10vh;
+}
+
+.centered-div {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 10vh;
+}
+
+.button-pera {
+  max-width: 12em;
+  align-self: right;
+  margin: lem;
+  color: green;
+}
+
 .App {
   text-align: center;
 }
